# tee-utility

./: .gitignore  CMakeLists.txt  README.md  mytee.c
.ipynb_checkpoints/: what am I doing here-checkpoint.ipynb
